# Robusto

./: .gitignore  CMakeLists.txt  Concepts.md  README.md  Robusto.code-workspace  compile_commands.json  defconfig  doxconfig  index.html  library.json  min_spiffs.csv  paradigm.md  platformio.ini  publish.sh  tutorials.html
components/robusto/: CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  idf_component.yml  library.json
components/robusto-network/: CMakeLists.txt  idf_component.yml
components/robusto-network/include/: robusto_cryptography.h  robusto_incoming.h  robusto_media_def.h  robusto_message.h  robusto_peer.h  robusto_peer_def.h
components/robusto-network/src/: robusto_network_init.c
components/robusto-network/src/incoming/: incoming_network.c  incoming_queue.c
components/robusto-network/src/media/: robusto_media.c
components/robusto-network/src/media/ble/: README.md  ble.c  ble.h  ble_global.c  ble_peer.c  ble_service.c  ble_spp.h
components/robusto-network/src/media/espnow/: Kconfig  espnow.c  espnow.h  espnow_messaging.c  espnow_messaging.h  espnow_peer.h  espnow_queue.c  espnow_queue.h
components/robusto-network/src/media/i2c/: Kconfig  i2c_init.c  i2c_init.h  i2c_messaging_arduino.cpp  i2c_peer.h  i2c_queue.c  i2c_queue.h  i2c_simulate.c
components/robusto-network/src/media/lora/: README.md  lora_messaging.cpp  lora_messaging.hpp  lora_peer.c
components/robusto-network/src/media/mock/: README.md  mock.h  mock_peer.c  mock_queue.c
components/robusto-network/src/media/radio/: RobustoHal.cpp  RobustoHal.hpp
components/robusto-network/src/media/spi/: spi_hal.h
components/robusto-network/src/message/: robusto_message.c  robusto_message_building.c  robusto_message_parsing.c  robusto_message_receiving.c  robusto_message_sending.c
components/robusto-network/src/peer/: robusto_peer.c  robusto_peers.c  robusto_presentation.c
components/robusto-network/src/qos/: qos_recovery.h  robusto_qos_init.h
components/robusto/base/: CMakeLists.txt  Kconfig  README.md
components/robusto/base/src/init/: init_arduino.c  init_esp-idf.c  init_native.c  init_robusto.c
components/robusto/base/src/logging/: logging_arduino.cpp  logging_esp-idf.c  logging_native.c  logging_robusto.c
components/robusto/base/src/sleep/: robusto_sleep.c
components/robusto/base/src/system/: compat_apple.c  compat_apple.h  compat_asprinf.c  compat_crc32.c  compat_mbed.cpp  compat_mbed.hpp  robusto_interrupts_esp32.c  robusto_interrupts_stm32.c  robusto_system.c
components/robusto/base/src/time/: robusto_time.c  robusto_time_arduino.cpp  robusto_time_esp-idf.c  robusto_time_native.c
components/robusto/conductor/: Kconfig  README.md  robusto_conductor.c  robusto_conductor.h
components/robusto/conductor/src/: robusto_conductor.c  robusto_conductor_client.c  robusto_conductor_server.c
components/robusto/flash/: Kconfig  README.md  robusto_spiffs.c
components/robusto/flash/include/: robusto_flash_init.h
components/robusto/flash/src/: robusto_flash_init.c  robusto_spiffs.c
components/robusto/include/: robconfig.h  robusto_concurrency.h  robusto_conductor.h  robusto_cryptography.h  robusto_flash.h  robusto_incoming.h  robusto_init.h  robusto_init_internal.h  robusto_input.h  robusto_logging.h  robusto_media.h  robusto_media_def.h  robusto_message.h  robusto_message_def.h  robusto_misc_init.h  robusto_network_init.h  robusto_network_service.h  robusto_peer.h  robusto_peer_def.h  robusto_pubsub.h  robusto_pubsub_client.h  robusto_pubsub_server.h  robusto_qos.h  robusto_queue.h  robusto_repeater.h  robusto_retval.h  robusto_screen.h  robusto_screen_minimal.h  robusto_server_init.h  robusto_sleep.h  robusto_states.h  robusto_sys_queue.h  robusto_system.h  robusto_time.h  robusto_umts.h
components/robusto/input/: Kconfig  README.md
components/robusto/input/src/: robusto_input_adc_monitor.c  robusto_input_init.c  robusto_input_init.h  robusto_input_resistance.c  robusto_input_resistance_ladder.c
components/robusto/misc/: README.md
components/robusto/misc/src/: robusto_misc_init.c
components/robusto/misc/src/pubsub/: robusto_pubsub_client.c  robusto_pubsub_server.c
components/robusto/misc/src/umts/: Kconfig  robusto_umts.c  robusto_umts.h  robusto_umts_def.h  robusto_umts_http.c  robusto_umts_http.h  robusto_umts_ip.c  robusto_umts_ip.h  robusto_umts_mqtt.c  robusto_umts_mqtt.h  robusto_umts_queue.c  robusto_umts_queue.h  robusto_umts_task.c  robusto_umts_task.h  robusto_umts_worker.c  robusto_umts_worker.h
components/robusto/network/: Kconfig  README.md
components/robusto/network/src/: robusto_network_init.c
components/robusto/network/src/fragmentation/: robusto_fragment.c
components/robusto/network/src/incoming/: incoming.c  incoming_network.c  incoming_queue.c  incoming_service.c
components/robusto/proxy/: Kconfig  README.md
components/robusto/proxy/include/: robusto_proxy.h  robusto_proxy_client.h  robusto_proxy_control.h  robusto_proxy_crc32.h  robusto_proxy_frame.h  robusto_proxy_inflight.h  robusto_proxy_lifecycle.h  robusto_proxy_protocol.h  robusto_proxy_pubsub.h  robusto_proxy_pubsub_adapter.h  robusto_proxy_pubsub_client.h  robusto_proxy_sdio.h  robusto_proxy_sdio_c6.h  robusto_proxy_sdio_c6_provisioning.h  robusto_proxy_service.h  robusto_proxy_session.h  robusto_proxy_transport.h
components/robusto/proxy/src/: robusto_proxy_client.c  robusto_proxy_control.c  robusto_proxy_crc32.c  robusto_proxy_frame.c  robusto_proxy_inflight.c  robusto_proxy_lifecycle.c  robusto_proxy_pubsub.c  robusto_proxy_pubsub_adapter.c  robusto_proxy_pubsub_client.c  robusto_proxy_service.c  robusto_proxy_session.c
components/robusto/server/: Kconfig
components/robusto/server/src/: robusto_server_init.c
components/robusto/ui/: Kconfig
components/robusto/ui/src/: robusto_32px.c  robusto_32px.h  robusto_screen.c  robusto_screen_minimal.c  robusto_sh1106.c  robusto_sh1106.h
examples/proxy/esp32_p4_c6_sdio/c6_delegate/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/src/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
(+1193 files in other folders)
